--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
 
 
-const api2 = "http://api.geonames.org/timezoneJSON?lat=13.08784&lng=80.27847&username=divya"
+const api2 = "https://secure.geonames.org/timezoneJSON?lat=13.08784&lng=80.27847&username=divya"
 
           // const searchBtn = document.querySelector('button');
 
@@ -209,7 +209,7 @@ const api2 = "http://api.geonames.org/timezoneJSON?lat=13.08784&lng=80.27847&use
 
       if (input.length > 0) {
           try {
-              const response = await fetch(`http://api.geonames.org/searchJSON?q=${input}&maxRows=10&username=divya`);
+              const response = await fetch(`https://secure.geonames.org/searchJSON?q=${input}&maxRows=10&username=divya`);
               const data = await response.json();
               result = data.geonames.map(item => item.name);
           } catch (error) {
